fix nav bar modal pop-up position, add styles, colors
fix previous issue of nav bar hover modal popping up out of place
add relevant styles and theme colors to nav bar
add css rule to render nav bar vs menu depending on screen width

--- a/src/app/_components/Web/WebsiteNavigationBar.css
+++ b/src/app/_components/Web/WebsiteNavigationBar.css
@@ -1,8 +1,9 @@
-@import "@radix-ui/colors/black-alpha.css";
-@import "@radix-ui/colors/indigo.css";
-@import "@radix-ui/colors/mauve.css";
-@import "@radix-ui/colors/purple.css";
-@import "@radix-ui/colors/violet.css";
+@import "@radix-ui/colors/black-alpha.css"; /* box shadow for 3D Look */
+@import "@radix-ui/colors/gold.css"; /* gradient background of pop up modal image */
+@import "@radix-ui/colors/olive.css"; /* pop up modal hover background and text color */
+@import "@radix-ui/colors/green.css"; /* gradient background of modal image */
+@import "@radix-ui/colors/grass.css"; /* text color and hover background of main buttons */
+@import "@radix-ui/colors/sage.css"; /* text color and hover background of main buttons */
 
 /* reset */
 button,
@@ -39,15 +40,15 @@ p {
   line-height: 1;
   border-radius: 4px;
   font-size: 15px;
-  color: var(--violet-11);
+  color: var(--green-11);
 }
 .NavigationMenuTrigger:focus,
 .NavigationMenuLink:focus {
-  box-shadow: 0 0 0 2px var(--violet-7);
+  box-shadow: 0 0 0 2px var(--grass-7);
 }
 .NavigationMenuTrigger:hover,
 .NavigationMenuLink:hover {
-  background-color: var(--violet-3);
+  background-color: var(--grass-3);
 }
 
 .NavigationMenuTrigger {
@@ -165,21 +166,21 @@ p {
   line-height: 1;
 }
 .ListItemLink:focus {
-  box-shadow: 0 0 0 2px var(--violet-7);
+  box-shadow: 0 0 0 2px var(--grass-7);
 }
 .ListItemLink:hover {
-  background-color: var(--mauve-3);
+  background-color: var(--olive-3);
 }
 
 .ListItemHeading {
   font-weight: 500;
   line-height: 1.2;
   margin-bottom: 5px;
-  color: var(--violet-12);
+  color: var(--grass-12);
 }
 
 .ListItemText {
-  color: var(--mauve-11);
+  color: var(--olive-11);
   line-height: 1.4;
   font-weight: initial;
 }
@@ -190,7 +191,7 @@ p {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, var(--purple-9) 0%, var(--indigo-9) 100%);
+  background: linear-gradient(135deg, var(--green-9) 0%, var(--gold-9) 100%);
   border-radius: 6px;
   padding: 25px;
   text-decoration: none;
@@ -198,7 +199,7 @@ p {
   user-select: none;
 }
 .Callout:focus {
-  box-shadow: 0 0 0 2px var(--violet-7);
+  box-shadow: 0 0 0 2px var(--grass-7);
 }
 
 .CalloutHeading {
@@ -211,7 +212,7 @@ p {
 }
 
 .CalloutText {
-  color: var(--mauve-4);
+  color: var(--olive-4);
   font-size: 14px;
   line-height: 1.3;
 }
@@ -228,7 +229,7 @@ p {
 
 .CaretDown {
   position: relative;
-  color: var(--violet-10);
+  color: var(--grass-10);
   top: 1px;
   transition: transform 250ms ease;
 }
