--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,15 @@ body {
   background-color: var(--lrc-green);
   color: var(--lrc-white-text);
 }
+
+@media only screen and (min-width: 850px) {
+  .mobile-layout {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 849px) {
+  .browser-layout {
+    display: none;
+  }
+}
